--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
   /* Modal background overlay */
   .modal-overlay {
-    position: fixed;
+    position: center;
     inset: 0;
     background-color: rgba(17, 24, 39, 0.6); /* darkish overlay */
     display: none;
