--- a/index.html
+++ b/index.html
@@ -362,16 +362,17 @@
   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
   :root {
-    --color-bg: #f9f9fb;
-    --color-primary: #0071e3;
-    --color-primary-hover: #005bb5;
-    --color-text: #1d1d1f;
-    --color-muted: #6e6e73;
-    --color-border: #d2d2d7;
-    --color-overlay-bg: rgba(29, 29, 31, 0.4);
+    --color-bg: #ffffff;
+    --color-primary: #000000;
+    --color-primary-hover: #222222;
+    --color-text: #374151; /* neutral gray */
+    --color-muted: #6b7280;
+    --color-border: #e5e7eb;
+    --color-overlay-bg: rgba(0,0,0,0.3);
     --radius: 12px;
-    --shadow-subtle: 0 1px 3px rgba(0,0,0,0.1);
+    --shadow-subtle: 0 2px 8px rgba(0,0,0,0.06);
     --transition: 0.3s ease-out;
+    --max-width: 420px;
   }
 
   * {
@@ -384,10 +385,10 @@
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     background-color: var(--color-bg);
     color: var(--color-text);
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     min-height: 100vh;
     padding-bottom: 80px; /* space for fixed button */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
   /* Fixed bottom button */
@@ -396,11 +397,11 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    padding: 14px 32px;
+    padding: 16px 40px;
     background-color: var(--color-primary);
     color: white;
-    font-weight: 600;
-    font-size: 1rem;
+    font-weight: 700;
+    font-size: 1.125rem;
     border: none;
     border-radius: var(--radius);
     box-shadow: var(--shadow-subtle);
@@ -422,7 +423,6 @@
     position: fixed;
     inset: 0;
     background: var(--color-overlay-bg);
-    backdrop-filter: blur(8px) saturate(140%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -441,13 +441,13 @@
     background: white;
     border-radius: var(--radius);
     width: 90%;
-    max-width: 420px;
-    padding: 32px 32px 24px;
-    box-shadow: 0 8px 24px rgba(0,0,0,0.12);
+    max-width: var(--max-width);
+    padding: 36px 36px 28px;
+    box-shadow: var(--shadow-subtle);
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    transform: translateY(20px);
+    gap: 24px;
+    transform: translateY(16px);
     transition: transform var(--transition);
   }
   .modal-overlay.active .modal {
@@ -456,57 +456,58 @@
 
   /* Modal header */
   .modal-header {
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: var(--color-text);
-    margin-bottom: 8px;
+    font-size: 48px;
+    font-weight: 700;
+    color: var(--color-primary);
+    margin: 0 0 8px 0;
+    line-height: 1.1;
   }
   .modal-subtitle {
-    font-size: 0.875rem;
+    font-size: 18px;
     color: var(--color-muted);
-    margin-bottom: 24px;
+    margin: 0 0 24px 0;
+    font-weight: 400;
   }
 
   /* Form styles */
   form {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 24px;
   }
 
   label {
     font-weight: 600;
-    font-size: 0.9rem;
-    color: var(--color-text);
+    font-size: 16px;
+    color: var(--color-primary);
     margin-bottom: 6px;
     display: block;
   }
 
   select, input[type="text"] {
     width: 100%;
-    padding: 10px 12px;
-    font-size: 1rem;
+    padding: 12px 14px;
+    font-size: 16px;
     font-weight: 400;
-    border: 1px solid var(--color-border);
-    border-radius: 8px;
-    color: var(--color-text);
+    border: 1.5px solid var(--color-border);
+    border-radius: 0.75rem;
+    color: var(--color-primary);
+    background: white;
     transition: border-color var(--transition), box-shadow var(--transition);
   }
   select:focus, input[type="text"]:focus {
     border-color: var(--color-primary);
-    box-shadow: 0 0 0 3px rgba(0,113,227,0.25);
+    box-shadow: 0 0 0 3px rgba(0,0,0,0.1);
     outline: none;
   }
 
-  /* Floating label effect (optional for inputs, but given instructions asked for fill fields, so normal labels) */
-  
   /* Submit button */
   .btn-submit {
-    padding: 14px 0;
+    padding: 16px 0;
     background-color: var(--color-primary);
     color: white;
-    font-weight: 600;
-    font-size: 1.1rem;
+    font-weight: 700;
+    font-size: 1.25rem;
     border: none;
     border-radius: var(--radius);
     cursor: pointer;
@@ -523,11 +524,11 @@
   /* Close button */
   .btn-close {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 20px;
+    right: 20px;
     background: transparent;
     border: none;
-    font-size: 1.5rem;
+    font-size: 28px;
     color: var(--color-muted);
     cursor: pointer;
     transition: color var(--transition);
@@ -535,11 +536,10 @@
   }
   .btn-close:hover,
   .btn-close:focus {
-    color: var(--color-primary);
+    color: var(--color-primary-hover);
     outline: none;
   }
 
-  /* Positioned relative for modal to position close button */
   .modal-container {
     position: relative;
   }
@@ -627,7 +627,7 @@
   const form = document.getElementById('replacementForm');
   const caseCodeInput = document.getElementById('caseCode');
 
-  // Function to generate random 4-digit code as string with leading zeros if needed
+  // Function to generate random 4-digit code as string
   function generateCaseCode() {
     return Math.floor(1000 + Math.random() * 9000).toString();
   }
@@ -636,9 +636,7 @@
   function openModal() {
     modalOverlay.classList.add('active');
     openModalBtn.setAttribute('aria-expanded', 'true');
-    // Generate and set case code
     caseCodeInput.value = generateCaseCode();
-    // Focus first input
     document.getElementById('partSelect').focus();
   }
 
@@ -652,25 +650,21 @@
   openModalBtn.addEventListener('click', openModal);
   closeModalBtn.addEventListener('click', closeModal);
 
-  // Close modal on overlay click outside modal content
   modalOverlay.addEventListener('click', (e) => {
     if (e.target === modalOverlay) {
       closeModal();
     }
   });
 
-  // Close modal on Escape key
   document.addEventListener('keydown', (e) => {
     if (e.key === 'Escape' && modalOverlay.classList.contains('active')) {
       closeModal();
     }
   });
 
-  // Handle form submission
   form.addEventListener('submit', (e) => {
     e.preventDefault();
 
-    // Basic validation for required fields
     if (!form.part.value) {
       alert('Please select a Part.');
       form.part.focus();
@@ -699,8 +693,6 @@
     const name = form.name.value.trim();
     const caseCode = form.caseCode.value;
 
-    // Compose the WhatsApp message
-    // Encoding for URL and line breaks with %0A
     const messageLines = [
       'Part Replacement Request:',
       `Part: ${part}`,
@@ -712,25 +704,23 @@
     ];
     const message = encodeURIComponent(messageLines.join('\n'));
 
-    // Phone number in international format without +
-    const phone = '60178040403';
+    // Numbers to send message to
+    const phones = ['60178040403', '60187717730'];
 
-    // WhatsApp API URL
-    const whatsappURL = `https://wa.me/${phone}?text=${message}`;
+    // Open multiple whatsapp links in new tabs/windows
+    phones.forEach(phone => {
+      const url = `https://wa.me/${phone}?text=${message}`;
+      window.open(url, '_blank');
+    });
 
-    // Open WhatsApp link in a new tab/window
-    window.open(whatsappURL, '_blank');
-
-    // Close modal
     closeModal();
-
-    // Optionally reset form fields except case code
     form.reset();
   });
 </script>
 
 </body>
 </html>
+
 
 
 
